--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ cover.out
 # ignore IDE folders
 .vscode/
 .idea/
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
