--- a/config/provider-metadata.yaml
+++ b/config/provider-metadata.yaml
@@ -1,36 +1,30 @@
-name: hashicorp/null
+name: mcwhitak/mongodb-users
 resources:
-    null_resource:
+    mongodb-users_user:
         subCategory: ""
-        description: The null_resource resource implements the standard resource lifecycle but takes no further action. The triggers argument allows specifying an arbitrary set of values that, when changed, will cause the resource to be replaced.
-        name: null_resource
-        title: null_resource Resource - terraform-provider-null
+        name: mongodb-users_user
+        title: mongodb-users_user Resource - mongodb-users
         examples:
-            - name: cluster
+            - name: user1
               manifest: |-
                 {
-                  "connection": [
+                  "db": "test",
+                  "password": "abc123",
+                  "roles": [
                     {
-                      "host": "${element(aws_instance.cluster.*.public_ip, 0)}"
+                      "db": "test",
+                      "role": "readWrite"
                     }
                   ],
-                  "provisioner": {
-                    "remote-exec": [
-                      {
-                        "inline": [
-                          "bootstrap-cluster.sh ${join(\" \", aws_instance.cluster.*.private_ip)}"
-                        ]
-                      }
-                    ]
-                  },
-                  "triggers": {
-                    "cluster_instance_ids": "${join(\",\", aws_instance.cluster.*.id)}"
-                  }
+                  "user": "user1"
                 }
-              dependencies:
-                aws_instance.cluster: |-
-                    {
-                      "count": 3
-                    }
-        argumentDocs: {}
-        importStatements: []
+        argumentDocs:
+            db: (String) DB Where the user is registered
+            id: (String) Placeholder identifier attribute
+            last_updated: (String) Timestamp of the last Terraform update of the order.
+            password: (String, Sensitive) Password of user, cannot be changed once set
+            role: (String)
+            roles: (Set of Object) Set of roles that the user has (see below for nested schema)
+            user: (String) Name of user
+        importStatements:
+            - terraform import mongodb-users_user.user1 test.user1
