--- a/examples/storeconfig/vault.yaml
+++ b/examples/storeconfig/vault.yaml
@@ -1,4 +1,4 @@
-apiVersion: template.upbound.io/v1alpha1
+apiVersion: mongodb-users.upbound.io/v1alpha1
 kind: StoreConfig
 metadata:
   name: vault
