--- a/package/crds/mongodb-users.mcwhitak_providerconfigs.yaml
+++ b/package/crds/mongodb-users.mcwhitak_providerconfigs.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: providerconfigs.template.upbound.io
+  name: providerconfigs.mongodb-users.mcwhitak
 spec:
-  group: template.upbound.io
+  group: mongodb-users.mcwhitak
   names:
     categories:
     - crossplane
     - provider
-    - template
+    - mongodb-users
     kind: ProviderConfig
     listKind: ProviderConfigList
     plural: providerconfigs
@@ -29,7 +29,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfig configures a Template provider.
+        description: A ProviderConfig configures a MongoDb-Users provider.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
