--- a/package/crds/mongodb-users.mcwhitak_storeconfigs.yaml
+++ b/package/crds/mongodb-users.mcwhitak_storeconfigs.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: storeconfigs.template.upbound.io
+  name: storeconfigs.mongodb-users.mcwhitak
 spec:
-  group: template.upbound.io
+  group: mongodb-users.mcwhitak
   names:
     categories:
     - crossplane
     - store
-    - template
+    - mongodb-users
     kind: StoreConfig
     listKind: StoreConfigList
     plural: storeconfigs
@@ -31,8 +31,8 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A StoreConfig configures how template controller should store
-          connection details.
+        description: A StoreConfig configures how mongodb-users controller should
+          store connection details.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
