Push in progress changes, 0.0.2 doesn't work

--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: mongodb-users.upbound.io/v1beta1
+apiVersion: mongodb-users.mcwhitak/v1beta1
 kind: ProviderConfig
 metadata:
   name: default
