fix: Correct secret reference

--- a/examples/user/secret.yaml
+++ b/examples/user/secret.yaml
@@ -5,7 +5,4 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  credentials: |
-    {
-      "password": "password123"
-    }
+  password: cGFzc3dvcmQxMjM=
