--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: mongodb-users.mcwhitak/v1beta1
+apiVersion: mongodb-users.pelotech/v1beta1
 kind: ProviderConfig
 metadata:
   name: default
