--- a/package/crds/mongodb-users.mongo.pelotech_storeconfigs.yaml
+++ b/package/crds/mongodb-users.mongo.pelotech_storeconfigs.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: storeconfigs.mongodb-users.pelotech
+  name: storeconfigs.mongodb-users.mongo.pelotech
 spec:
-  group: mongodb-users.pelotech
+  group: mongodb-users.mongo.pelotech
   names:
     categories:
     - crossplane
